--- a/00-Intro-GIT-HTML-CSS/03. HTML/homework/homework.html
+++ b/00-Intro-GIT-HTML-CSS/03. HTML/homework/homework.html
@@ -5,20 +5,6 @@
 </head>
 <body>
 <link rel="stylesheet" href="./styles.css">
-<style>
-    h1 {color: #E12725;}
-    #spanId {font-size: 18px;margin: 50px;}
-    #thirdDiv {
-        width: 500px; 
-        height: 600px;
-        background-color: #E12725;
-        padding: 50px;
-        border-style:solid;
-        border-width: 5px;
-        border-color: #007A56;
-    }
-    img {width: 400px;}
-</style>
 <div class="divClass">
     <h1>Amando</h1>
     <h3>Henry</h3>
@@ -26,14 +12,18 @@
 </div>
 
 <div class="divClass">
-    <span id="spanId">Pizza</span>
-    <a href="https://papajohns.com.mx/home"></a>
+    <span id="spanId">Me encanta la Pizza</span>
+    <a href="https://papajohns.com.mx/home">Papa Johns</a>
 </div>
 
 <div id="thirdDiv">
     <li>Especialidad</li>
+    <img src="https://tunicaragua.com/images/stories/virtuemart/product/La%20Favorita%20de%20John%20-%20Papa%20John%C2%B4s.jpg"
+    style="border-style: solid; border-color: #007A56; border-width: 5px;" />
     <li>Signature</li>
-    <img src="https://papajohns.com.mx/images/uploads/promotions/mexico/web%20608x420_139-23-02-2021puebla.png" />
+    <img src="https://tunicaragua.com/images/stories/virtuemart/product/Alfredo%20con%20Espinacas%20-%20Papa%20John%C2%B4s.jpg" 
+    style="border-style: solid; border-color: #007A56; border-width: 5px;"/>
+    
 </div>
 
 </body>
