modified:   00-Intro-GIT-HTML-CSS/02. Git/homework/README.md 	modified:   00-Intro-GIT-HTML-CSS/03. HTML/demos/clase1/externo.css 	modified:   00-Intro-GIT-HTML-CSS/03. HTML/demos/clase1/htmlConEstilo.html 	modified:   00-Intro-GIT-HTML-CSS/03. HTML/demos/clase1/miPrimerHTML.html 	modified:   00-Intro-GIT-HTML-CSS/03. HTML/homework/README.md 	modified:   00-Intro-GIT-HTML-CSS/03. HTML/homework/cv.html 	modified:   00-Intro-GIT-HTML-CSS/03. HTML/homework/homework.html 	modified:   00-Intro-GIT-HTML-CSS/03. HTML/homework/styles.css

--- a/00-Intro-GIT-HTML-CSS/03. HTML/demos/clase1/htmlConEstilo.html
+++ b/00-Intro-GIT-HTML-CSS/03. HTML/demos/clase1/htmlConEstilo.html
@@ -3,7 +3,7 @@
 <head>
   <title>Estilos</title>
   <link rel="stylesheet" href="./externo.css">
-  <style>
+  <!-- <style>
       p {
         color: blue;
         font-size: 20px;
@@ -11,14 +11,26 @@
       span {
         color: green;
       }
-  </style>
+  </style> -->
 </head>
 <body>
   <p style="color:red">Hola</p>
   <p class='amarillo'>Hola</p>
   <p>Hola</p>
   <span> Chao </span>
-  <p id='unico'>Hola</p>
+  <p id='unico'>Hola Henry</p>
   <p class='amarillo'>Hola</p>
+  <ol class='amarillo'>
+  <ul>
+    <li>
+      <span>Elemento uno</span>
+    </li>
+    <li>
+      <p>Podemos anidar cualquier tipo de tag adentro</p>
+    </li>
+    <li>
+      <span>tercer elemento</span>
+    </li>
+  </ul>
 </body>
 </html>
