--- a/00-Intro-GIT-HTML-CSS/03. HTML/demos/clase1/miPrimerHTML.html
+++ b/00-Intro-GIT-HTML-CSS/03. HTML/demos/clase1/miPrimerHTML.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Leo</title>
+  <title>Amando Cats</title>
 </head>
 <body>
+    <style>h1 {
+      color: red;</style>
+    
+    </h1><h1>Gatito Fotos</h1>
+    <h2>Funny Cats</h2>
+    <div>
+    <p style="color: aqua;">This cats are really Funny</p> </div>
     <p>Soy Henry</p>
     <p>Soy Henry</p>
     <a href="http://www.google.com">Link a Google</a>
     <img src="http://placekitten.com/500/500" />
-    <img src="./gatito.jpg" />
+    <img src="gatito.jpg" />
+    <form>
+      <lable>Input de color</lable>
+      <input type="color"/>
+      <lable>Name: </lable>
+      <input type="text" placeholder="Your name" />
+      <button>Click here</button>
+    </form>
   </body>
 </html>
