--- a/00-Intro-GIT-HTML-CSS/03. HTML/homework/cv.html
+++ b/00-Intro-GIT-HTML-CSS/03. HTML/homework/cv.html
@@ -22,7 +22,7 @@ a entornos de rápido cambio.
 <h2>Hobbies</h2>
 <p>Web Development</p>
 <h1>Why Henry</h1>
-<p>¿Por qué no?</p>
+<p>¿Por qué no? Porque me encanta</p>
 </head>
 
 <body>
