--- a/00-Intro-GIT-HTML-CSS/03. HTML/homework/homework.html
+++ b/00-Intro-GIT-HTML-CSS/03. HTML/homework/homework.html
@@ -17,13 +17,16 @@
 </div>
 
 <div id="thirdDiv">
-    <li>Especialidad</li>
-    <img src="https://tunicaragua.com/images/stories/virtuemart/product/La%20Favorita%20de%20John%20-%20Papa%20John%C2%B4s.jpg"
-    style="border-style: solid; border-color: #007A56; border-width: 5px;" />
-    <li>Signature</li>
-    <img src="https://tunicaragua.com/images/stories/virtuemart/product/Alfredo%20con%20Espinacas%20-%20Papa%20John%C2%B4s.jpg" 
-    style="border-style: solid; border-color: #007A56; border-width: 5px;"/>
-    
+    <ul>
+        <li>Especialidad
+        <img src="https://tunicaragua.com/images/stories/virtuemart/product/La%20Favorita%20de%20John%20-%20Papa%20John%C2%B4s.jpg"
+            style="border-style: solid; border-color: #007A56; border-width: 5px;" alt="Especialidad" />
+        </li>
+        <li>Signature
+        <img src="https://tunicaragua.com/images/stories/virtuemart/product/Alfredo%20con%20Espinacas%20-%20Papa%20John%C2%B4s.jpg" 
+        style="border-style: solid; border-color: #007A56; border-width: 5px;" alt="Signature"/>
+        </li>
+    </ul>
 </div>
 
 </body>
